--- a/r-squared-short.Rmd
+++ b/r-squared-short.Rmd
@@ -4,7 +4,7 @@ author:
   - Tommy Jones^[Dept. of Computational and Data Sciences, George Mason University]
   - Mark Meyer^[Dept. of Mathematics and Statistics, Georgetown University]
 date: "`r Sys.Date()`"
-bibliography: r2.bib
+bibliography: [r2.bib, manual.bib]
 header-includes:
     - \usepackage{setspace}\doublespacing
     - \usepackage[utf8]{inputenc}
@@ -75,7 +75,7 @@ Equation (\ref{eqn:r2euclidean}) extends $R^2$ to cover outcomes in $\mathbb{R}_
 
 Fig. 1 visualizes the geometric interpretation of $R^2$ for outcomes in $\mathbb{R}_2$. The left image represents $SS_{tot.}$: the red dots are data points ($\boldsymbol{y}_i$); the black dot is the vector of means ($\bar{\boldsymbol{y}}$); the line segments represent the Euclidean distance from each $\boldsymbol{y}_i$ to $\bar{\boldsymbol{y}}$. $SS_{tot.}$ is obtained by squaring the length of each line segment and then adding the squared segments together. The right image represents $SS_{resid.}$: the blue dots are the fitted values ($\hat{\boldsymbol{y}}_i$); the line segments represent the Euclidean distance from each $\hat{\boldsymbol{y}}_i$ to its corresponding $\boldsymbol{y}_i$. $SS_{resid.}$ is obtained by squaring the length of each line segment and then adding the squared segments together.
 
-```{r geometric_graphic, fig.cap = "Visualizing the geometric interpretation of R-squared. Sum up the squared length of each line segment. This figure corresponds to an R-squared of 0.87", fig.asp = .55}
+```{r geometric_graphic, fig.cap = "Visualizing the geometric interpretation of R-squared. Sum up the squared length of each line segment for the total (left) or residual (right) sums of squares. This figure corresponds to an R-squared of 0.87", fig.asp = .55}
 set.seed("8675309")
 
 # Generate sample data poings
@@ -136,14 +136,9 @@ This $R^2$ is maximized at 1---representing perfect predictions. Unlike traditio
 The $R^2$ given in (\ref{eqn:r2euclidean}) is sensitive to the scale of the dimensions of $\boldsymbol{Y}$. This is a common property of Euclidean distance, exacerbated by squaring. Possible mitigating steps may be standardizing the columns of $\boldsymbol{Y}$ before modeling or standardinzing both the columns of $\boldsymbol{Y}$ and $\hat{\boldsymbol{Y}}$ after modeling. When one standardizes may lead to different results, an exploration of which is out of scope for this note.
 
 # Discussion
-We have shown that $R^2$ can be calculated for multivariate outcomes from a geometric interpretation of (\ref{eqn:r2def1}).
+Viewing $R^2$ as a ratio of distances motivates a new direction for extended definitions of $R^2$. Researchers may wish to explore $R^2$ calculations based other distance measures more appropriate for other settings. For example, if one's model estimates probabilities perhaps Hellinger distance [@hellinger1909new] would be more appropriate. If scale between outcome variables is of concern, maybe an $R^2$ leveraging Mahalanobis distance [@mahalanobis] has advantage over variable normalization as discussed above. 
 
-A geometric interpretation of traditional $R^2$ lends itself to an ex
+We have shown that $R^2$ can be calculated for multivariate outcomes from a geometric interpretation of (\ref{eqn:r2def1}). Since we use the standard definition of $R^2$, this approach does not alter existing issues motivating alternate definitions of $R^2$ for, e.g., Bayesian models or nonlinear models. It is worth noting that scale differences in outcome variables can swamp the calculation. We leave an exploration of remediation strategies to future work. We have implemented the $R^2$ metric in (\ref{eqn:r2euclidean}) in a package for the R programming language called `mvrsquared` [@mvrsquared].
 
-* Extend R^2 to n-dimensional outcomes using geometric interpretation of traditional definition
-* Does not alter existing issues motivating alternate definitions for e.g. bayesian models, nonlinear models
-* Worth noting: no lower bound of zero and squared euclidean distances
-* Made available in R package mvrsquared
-* Future research may explore different distance functions--as different variances for different models
-
+\newpage{}
 # References
