--- a/r-squared-short.Rmd
+++ b/r-squared-short.Rmd
@@ -41,15 +41,15 @@ or equivalently
 
 In (\ref{eqn:r2def1}) $SS_{resid.}$ is called the _residual sum of squares_ and $SS_{tot.}$ is called the _total sum of squares_. And in (\ref{eqn:r2def2}) $\bar{y}$ is the sample mean and $\hat{y}_i$ is the value predicted for observation $y_i$. 
 
-The definitions in In (\ref{eqn:r2def1}) and (\ref{eqn:r2def2}) are "model free". But for a linear model, they are alegebraically equivalent to
+The definitions in In (\ref{eqn:r2def1}) and (\ref{eqn:r2def2}) are "model free" but they are alegebraically equivalent to
 
 \begin{equation}
   \label{eqn:r2var}
     R^2 
-      = \frac{V_{i=1}^N \hat{y}_i}{V_{i=1}^N y_i}
+      = \frac{\frac{1}{N - 1} \sum_{i=1}^N (\hat{y}_i - \bar{y})^2}{\frac{1}{N - 1} \sum_{i=1}^N (y_i - \bar{y})^2}
 \end{equation} 
 
-where $V_{i=1}^N z_i = \frac{1}{N - 1} \sum_{i=1}^N (z_i - \bar{z})^2$. Equation (\ref{eqn:r2var}) is the proportion of variance in $y$ accounted for by the (linear) model. Researchers have used and extended (\ref{eqn:r2var}) to develop $R^2$ metrics for a range of models such as logistic regression [@hu2006], mixed models [@piepho2019], Bayesian regression models [@gelman2018r2], and more.
+For a linear model, equation (\ref{eqn:r2var}) is the proportion of variance in $y$ accounted for by the model. Researchers have used and extended the variance relationship in (\ref{eqn:r2var}) to develop $R^2$ metrics for a range of models such as logistic regression [@hu2006], mixed models [@piepho2019], Bayesian regression models [@gelman2018r2], and more.
 
 To our knowledge our research is the first time anyone has proposed a variation of $R^2$ for models predicting an outcome in multiple dimensions---where each $\boldsymbol{y}_i$ is a vector and $\boldsymbol{Y}$ is a matrix. Multidimensional outcomes occur in settings such as [need good examples here... simultaneous equations? neural networks? topic models?] Our $R^2$ relies on a geometric interpretation of (\ref{eqn:r2def1}). As a result, it is also model free. 
 
