write out numbers less than 10

--- a/r-squared-short.Rmd
+++ b/r-squared-short.Rmd
@@ -131,7 +131,7 @@ for(j in 1:nrow(mymat)){
 # Properties 
 You can view the $R^2$ in (\ref{eqn:r2euclidean}) as the proportion of total squared distance from each observation to its mean that is accounted for by the model, similar to the "proportion of explained variance" interpretation. 
 
-This $R^2$ is maximized at 1---representing perfect predictions. Unlike traditional $R^2$, it does not have a lower bound, as can be the case in certain circumstances with tradtional $R^2$ [@barten1987] [@windmeijer1997]. Losing the lower bound of zero does not negatively impact interpretation. When $R^2 = 0$, then $SS_{resid.} = SS_{tot.}$; the model is no better than guessing the mean outcome. So negative values of $R^2$ mean the model is _worse_ than guessing the mean outcome for every observation. Its interpretation remains straightforward.
+This $R^2$ is maximized at one---representing perfect predictions. Unlike traditional $R^2$, it does not have a lower bound, as can be the case in certain circumstances with tradtional $R^2$ [@barten1987] [@windmeijer1997]. Losing the lower bound of zero does not negatively impact interpretation. When $R^2 = 0$, then $SS_{resid.} = SS_{tot.}$; the model is no better than guessing the mean outcome. So negative values of $R^2$ mean the model is _worse_ than guessing the mean outcome for every observation. Its interpretation remains straightforward.
 
 The $R^2$ given in (\ref{eqn:r2euclidean}) is sensitive to the scale of the dimensions of $\boldsymbol{Y}$. This is a common property of Euclidean distance, exacerbated by squaring. Possible mitigating steps may be standardizing the columns of $\boldsymbol{Y}$ before modeling or standardinzing both the columns of $\boldsymbol{Y}$ and $\hat{\boldsymbol{Y}}$ after modeling. When one standardizes may lead to different results, an exploration of which is out of scope for this note.
 
