--- a/r2.bib
+++ b/r2.bib
@@ -75,3 +75,22 @@ number = {1},
 volume = {2}, 
 local-url = {file://localhost/Users/tommy/Google%20Drive/gmu/_dissertation/references/2021-01-30/Vol02_1936_1_Art05.pdf}
 }
+
+@article {hellinger1909new,
+  title = {New definition of the theory of quadratic forms of infinitely many different {\ "a} changes.},
+  author = {Hellinger, Ernst},
+  journal = {Journal f {\ "u} r pure and applied mathematics},
+  volume = {1909},
+  number = {136},
+  pages = {210--271},
+  year = {1909},
+  publisher = {De Gruyter}
+}
+
+@online{mvrsquared,
+  author = {Tommy Jones},
+  title = {mvrsquared},
+  year = 2020,
+  url = {https://CRAN.R-project.org/package=mvrsquared},
+  urldate = {2020-12-30}
+}
